--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "author": "EnderDev <kieran@dothq.co>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && node dist/index.js"
+    "build": "tsc && node dist/index.js",
+    "deploy": "tsc && cp send-feedback.html dist/send-feedback.html && vercel --prod"
   },
   "dependencies": {
     "@types/express": "^4.17.9",
     "@types/express-rate-limit": "^5.1.0",
+    "@types/express-slow-down": "^1.3.0",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3"
+    "express-rate-limit": "^5.2.3",
+    "express-slow-down": "^1.4.0"
   }
 }
